fixed overflow y

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   background-color: #fff; 
 }
 
-body {
+html,body {
   overflow-x: hidden;
 }
 
